// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FD Input should render correctly 1`] = `
<TextInput
  id="input"
  localStorage={true}
>
  <GlobalStyleComponent />
  <div
    className="fd-input"
  >
    <div
      className="input"
    >
      <input
        id="input"
        maxLength={null}
        minLength={null}
        name="input"
        onChange={[Function]}
        onInvalid={[Function]}
        placeholder=" "
        required={false}
        title="Value"
        type="text"
        value="text"
      />
      <label
        htmlFor="input"
      >
        Value
         
        <i
          className="icon-check"
        />
      </label>
      <div
        className="input-message error-message"
      />
      <div
        className="input-message"
      />
    </div>
  </div>
</TextInput>
`;

exports[`FD Input should render with label correctly 1`] = `
<TextInput
  id="input"
  label="this is the label"
  value="test value"
>
  <GlobalStyleComponent />
  <div
    className="fd-input"
  >
    <div
      className="input"
    >
      <input
        id="input"
        maxLength={null}
        minLength={null}
        name="input"
        onChange={[Function]}
        onInvalid={[Function]}
        placeholder=" "
        required={false}
        title="this is the label"
        type="text"
        value="test value"
      />
      <label
        htmlFor="input"
      >
        this is the label
         
        <i
          className="icon-check"
        />
      </label>
      <div
        className="input-message error-message"
      />
      <div
        className="input-message"
      />
    </div>
  </div>
</TextInput>
`;

exports[`FD Input should render with title correctly 1`] = `
<TextInput
  id="input"
  label="this is the label"
  title="this is the title"
  value="test value"
>
  <GlobalStyleComponent />
  <div
    className="fd-input"
  >
    <div
      className="input"
    >
      <input
        id="input"
        maxLength={null}
        minLength={null}
        name="input"
        onChange={[Function]}
        onInvalid={[Function]}
        placeholder=" "
        required={false}
        title="this is the title"
        type="text"
        value="test value"
      />
      <label
        htmlFor="input"
      >
        this is the label
         
        <i
          className="icon-check"
        />
      </label>
      <div
        className="input-message error-message"
      />
      <div
        className="input-message"
      />
    </div>
  </div>
</TextInput>
`;

exports[`FD Input should render with value correctly 1`] = `
<TextInput
  id="input"
  value="test value"
>
  <GlobalStyleComponent />
  <div
    className="fd-input"
  >
    <div
      className="input"
    >
      <input
        id="input"
        maxLength={null}
        minLength={null}
        name="input"
        onChange={[Function]}
        onInvalid={[Function]}
        placeholder=" "
        required={false}
        title="Value"
        type="text"
        value="test value"
      />
      <label
        htmlFor="input"
      >
        Value
         
        <i
          className="icon-check"
        />
      </label>
      <div
        className="input-message error-message"
      />
      <div
        className="input-message"
      />
    </div>
  </div>
</TextInput>
`;
